--- a/Course-project/Frontend/CSV_Cards/csv-card-upload.html
+++ b/Course-project/Frontend/CSV_Cards/csv-card-upload.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>CSV Upload Form</title>
-    <link rel="stylesheet" href="csv-form.css">
     <script src="csv-form-handler.js" defer></script>
+    <link rel="stylesheet" href="csv-form.css">
 </head>
 <body>
-    <form id="csv-form">
-        <label for="csv">Upload CSV File:</label>
-        <input type="file" id="csv" name="csv" accept=".csv" enctype="multipart/form-data" required> <!--enctype was added-->
-        <button type="submit">Upload CSV</button>
-        <div id="errorMessage" class="error"></div>
-    </form>
+    <section>
+        <form id="csv-form">
+            <label for="csv">Upload CSV file</label>
+            <input type="file" id="csv" name="csv" accept=".csv" enctype="multipart/form-data" required> <!--enctype was added-->
+            <button type="submit">Upload CSV</button>
+            <!--<div id="errorMessage" class="error"></div>-->
+        </form>
+    </section>
 </body>
 </html>
