DB refactoring, error messages with error handling, directory structure

--- a/Course-project/Frontend/CardBox/CardBox.html
+++ b/Course-project/Frontend/CardBox/CardBox.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="card-box.css">
-    <script src="card-box-sent.js" defer></script>
-    <script src="card-box-received.js" defer></script>
-    <script src="open-card.js" defer></script>
+    <link rel="stylesheet" href="./CardBox.css">
+    <script src="./CardBoxSent.js" defer></script>
+    <script src="./CardBoxReceived.js" defer></script>
+    <script src="./OpenCard.js" defer></script>
 </head>
 <body>
     <div class="container">
-        <div class="section">
+        <div class="section" id="sent">
             <h2>Cards Sent from You</h2>
             <div id="sent-cards">
             </div>
         </div>
-        <div class="section">
+        <div class="section" id="received">
             <h2>Cards Sent to You</h2>
             <div id="received-cards">
             </div>
