--- a/Course-project/Frontend/FormCard/FormCard.html
+++ b/Course-project/Frontend/FormCard/FormCard.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Second Homework</title>
-    <link rel="stylesheet" href="form-card.css">
-    <script src="form-card.js" defer></script>
+    <link rel="stylesheet" href="./FormCard.css">
+    <script src="./FormCard.js" defer></script>
 </head>
 <body>
     <main>
-        <form class="csv-form">
+        <form class="csv-form" id="formCard">
             
             <div class="form-header">
                 <h2>Card Form</h2>
