--- a/Course-project/Frontend/Profile/profile.html
+++ b/Course-project/Frontend/Profile/profile.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile page</title>
-    <link rel="stylesheet" href="profile.css">
-    <script src="profile.js" defer></script>
+    <link rel="stylesheet" href="./Profile.css">
+    <script src="./Profile.js" defer></script>
 </head>
 <body>
-    <nav>
+    <nav id="navigationBar">
         <ul>
             <li class="logo">Credify</li>
             <li><button id="logout_btn">Logout</button></li>
