--- a/Course-project/Frontend/Home/home.html
+++ b/Course-project/Frontend/Home/home.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Greetings cards</title>
-    <link rel="stylesheet" href="./home.css">
-    <script src="home.js" defer></script>
+    <link rel="stylesheet" href="./Home.css">
 </head>
 <body>
     <header>
