Add validation and add mission feature

--- a/Course-project/Frontend/Profile/profile.html
+++ b/Course-project/Frontend/Profile/profile.html
@@ -6,6 +6,7 @@
     <title>Profile page</title>
     <link rel="stylesheet" href="./Profile.css">
     <script src="./Profile.js" defer></script>
+    <script src="mission.js" defer></script>
 </head>
 <body>
     <nav id="navigationBar">
@@ -14,6 +15,11 @@
             <li><button id="logout_btn">Logout</button></li>
         </ul>
     </nav>
+    <section id="mission-container">
+        <div class="mission">
+          <h1 id="mission-text"></h1>  
+        </div>
+    </section>
     <section class="button_section">
         <div class="btn_container">
             <button id="see_your_card_box_btn" class="btn">
