Combined CSS and image with mission logic

--- a/Course-project/Frontend/FormCard/FormCard.html
+++ b/Course-project/Frontend/FormCard/FormCard.html
@@ -28,7 +28,7 @@
             </div>
     
             <div>
-                <button type="submit">Send greeting</button>
+                <button type="submit">Send card</button>
             </div>
         </form>
     </main>
