--- a/Course-project/Frontend/Profile/profile.html
+++ b/Course-project/Frontend/Profile/profile.html
@@ -6,7 +6,7 @@
     <title>Profile page</title>
     <link rel="stylesheet" href="./Profile.css">
     <script src="./Profile.js" defer></script>
-    <script src="mission.js" defer></script>
+    <script src="Mission.js" defer></script>
 </head>
 <body>
     <nav id="navigationBar">
